@@ -3581,16 +3581,17 @@ considerably smaller than a device pixel.</p>
   class="attr-value"><a>&lt;number-optional-number&gt;</a></span>"</dt>
     <dd>Indicates the number of cells in each dimension for <a>'kernelMatrix'</a>. The values provided must be
       <a>&lt;integer&gt;</a>
-      s greater than zero. The first number, &lt;orderX&gt;, indicates the
+      s greater than zero. Values that are not integers will be 
+    	truncated, i.e. rounded to the closest integer value towards zero.
+      The first number, &lt;orderX&gt;, indicates the
       number of columns in the matrix. The second number, &lt;orderY&gt;,
       indicates the number of rows in the matrix. If &lt;orderY&gt; is not
       provided, it defaults to &lt;orderX&gt;.<br />
-      A typical value is order="3". It is recommended that only small values
+      It is recommended that only small values
       (e.g., 3) be used; higher values may result in very high CPU overhead
       and usually do not produce results that justify the impact on
       performance.<br />
-      If the attribute is not specified, the effect is as if a value of "3"
-      were specified.<br />
+      The <a>lacuna value</a> for <a>'order'</a> is <span class="attr-value">3</span>. <br />
       <span class="anim-target">Animatable: yes.</span></dd>
   <dt id="feConvolveMatrixElementKernelMatrixAttribute"><span
   class="adef">kernelMatrix</span> = "<span class="attr-value">&lt;list of
@@ -3608,8 +3609,8 @@ considerably smaller than a device pixel.</p>
       value. A divisor that is the sum of all the matrix values tends to have
       an evening effect on the overall color intensity of the result. If the
       specified divisor is zero then the default value will be used instead.
-      The default value is the sum of all values in kernelMatrix, with the
-      exception that if the sum is zero, then the divisor is set to 1.<br />
+      The <a>lacuna value</a> is the sum of all values in kernelMatrix, with the
+      exception that if the sum is zero, then the divisor is set to <span class="attr-value">1</span>.<br />
       <span class="anim-target">Animatable: yes.</span></dd>
   <dt id="feConvolveMatrixElementBiasAttribute"><span
   class="adef">bias</span> = "<span
