@@ -75,14 +75,14 @@
 
    <h1>Filter Effects 1.0</h1>
 
-   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 20 July 2012</h2>
+   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 23 July 2012</h2>
 
    <dl>
     <dt>This version:
 
     <dd> <a
      href="http://dvcs.w3.org/hg/FXTF/raw-file/tip/filters/index.html">http://dvcs.w3.org/hg/FXTF/raw-file/tip/filters/index.html</a>
-     <!--http://www.w3.org/TR/2012/WD-filter-effects-20120720/-->
+     <!--http://www.w3.org/TR/2012/WD-filter-effects-20120723/-->
 
     <dt>Latest version:
 
@@ -6246,17 +6246,18 @@ A' = <a
 
     <dd>Indicates the number of cells in each dimension for <a>‘<code
      class=property>kernelMatrix</code>’</a>. The values provided must be
-     <a>&lt;integer&gt;</a> s greater than zero. The first number,
-     &lt;orderX&gt;, indicates the number of columns in the matrix. The
-     second number, &lt;orderY&gt;, indicates the number of rows in the
-     matrix. If &lt;orderY&gt; is not provided, it defaults to
+     <a>&lt;integer&gt;</a> s greater than zero. Values that are not integers
+     will be truncated, i.e. rounded to the closest integer value towards
+     zero. The first number, &lt;orderX&gt;, indicates the number of columns
+     in the matrix. The second number, &lt;orderY&gt;, indicates the number
+     of rows in the matrix. If &lt;orderY&gt; is not provided, it defaults to
      &lt;orderX&gt;.<br>
-     A typical value is order="3". It is recommended that only small values
-     (e.g., 3) be used; higher values may result in very high CPU overhead
-     and usually do not produce results that justify the impact on
-     performance.<br>
-     If the attribute is not specified, the effect is as if a value of "3"
-     were specified.<br>
+     It is recommended that only small values (e.g., 3) be used; higher
+     values may result in very high CPU overhead and usually do not produce
+     results that justify the impact on performance.<br>
+     The <a>lacuna value</a> for <a>‘<code
+     class=property>order</code>’</a> is <span class=attr-value>3</span>.
+     <br>
      <span class=anim-target>Animatable: yes.</span>
 
     <dt id=feConvolveMatrixElementKernelMatrixAttribute><span
@@ -6279,9 +6280,9 @@ A' = <a
      color value. A divisor that is the sum of all the matrix values tends to
      have an evening effect on the overall color intensity of the result. If
      the specified divisor is zero then the default value will be used
-     instead. The default value is the sum of all values in kernelMatrix,
-     with the exception that if the sum is zero, then the divisor is set to
-     1.<br>
+     instead. The <a>lacuna value</a> is the sum of all values in
+     kernelMatrix, with the exception that if the sum is zero, then the
+     divisor is set to <span class=attr-value>1</span>.<br>
      <span class=anim-target>Animatable: yes.</span>
 
     <dt id=feConvolveMatrixElementBiasAttribute><span class=adef>bias</span>
