@@ -1,6 +1,11 @@
 Changes for Filter Effects specification
 ----------------------------------------
 
+2012-07-23  Erik Dahlström  <ed@opera.com>
+
+- ACTION-3314: Specify that float values in the 'order' attribute of feConvolveMatrix 
+  will truncate the values if they're not integers.
+
 2012-07-20  Dirk Schulze  <dschulze@adobe.com>
 
 - corrections to shader part after review
